# clitheme

./: .gitignore  PKGBUILD  README.en.md  README.md  README.zh-CN.md  __init__.py  _generator.py  _globalvar.py  cli.py  clitheme-testblock_testprogram.py  clitheme_demo.py  clitheme_example.py  clitheme_fallback.py  clithemedef-test_testprogram.py  frontend.py  pyproject.toml
debian/: changelog  clitheme.manpages  control  copyright  debhelper-build-stamp  files  rules
debian/upstream/: metadata.ex
docs/: clitheme.1
example-clithemedef/: README.zh-CN.md  example-theme-textemojis.clithemedef.txt  example-theme-textemojis_clithemedef.txt
src/: clitheme-testblock_testprogram.py  clithemedef-test_testprogram.py  db_interface_tests.py
src/clitheme/: __main__.py  _generator.py  _get_resource.py  _globalvar.py  _version.py  cli.py  frontend.py  zh_CN-strings.clithemedef.txt
src/clitheme/_generator/: __init__.py  db_interface.py
src/clitheme/strings/: cli-strings.clithemedef.txt  generator-strings.clithemedef.txt
tests/: clithemedef-test_expected-frontend.txt  clithemedef-test_expected.txt  clithemedef-test_mainfile.clithemedef.txt  clithemedef-test_mainfile.txt
